# photoroom-interview

./: .env.local  .gitignore  README.md  manage.py  pyproject.toml  requirements-dev.txt
photoroom/: admin.py  apps.py  renderers.py  settings.py  urls.py
photoroom/migrations/: 0001_initial.py  0002_initial.py
photoroom/models/: __init__.py  color_pallete.py
photoroom/permissions/: __init__.py  can_join_leave_team.py  is_color_pallete_team_member.py  is_new_team_or_member.py
photoroom/serializers/: __init__.py  color_pallete.py  team.py  user.py
photoroom/views/: __init__.py  color_pallete.py  index.py  team.py  user.py
tests/: conftest.py
tests/views/: test_color_pallete_view.py  test_team_view.py
